extentions - visuals and form

--- a/day-5/form/index.html
+++ b/day-5/form/index.html
@@ -19,9 +19,8 @@
         <button id="submit">Validate Form</button>
     </form>
 
-    <div id="error-box">
-
-    </div>
+    <div id="error-box"></div>
+    <div id="welcome-msg"></div>
 
     <script src="./main.js"></script>
 </body>
